{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 65,
  "lineage": "e8fe086b-83e8-b0de-86aa-33dd2c794f71",
  "resources": [
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "vpc",
      "provider": "module.dev-infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:952346071341:vpc/vpc-012fecb349666ed21",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-09e6157bcdc4a17cd",
            "default_route_table_id": "rtb-0a01b2b74dad735ce",
            "default_security_group_id": "sg-0820d08fcaa0de095",
            "dhcp_options_id": "dopt-06b39219a8e6a55e5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-012fecb349666ed21",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a01b2b74dad735ce",
            "owner_id": "952346071341",
            "region": "ap-south-1",
            "tags": {
              "Name": "Default VPC"
            },
            "tags_all": {
              "Name": "Default VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "myinstance",
      "provider": "module.dev-infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f918f7e67a3323f0",
            "arn": "arn:aws:ec2:ap-south-1:952346071341:instance/i-022f004fab1d0ae40",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-022f004fab1d0ae40",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-new-dev",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-032f00c95a9ba4e8a",
            "private_dns": "ip-172-31-46-248.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.46.248",
            "public_dns": "ec2-13-233-183-230.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.183.230",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06f49e179b2792397",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "new-SG-new-dev"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e552a33ef5caae1e",
            "tags": {
              "Environment": "dev",
              "Name": "dev-terraform"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ad6821cb00fa71a9"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dev-infra.aws_default_vpc.vpc",
            "module.dev-infra.aws_key_pair.keypairs",
            "module.dev-infra.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "module.dev-infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:952346071341:security-group/sg-0ad6821cb00fa71a9",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All access open outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad6821cb00fa71a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http open",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh open",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "new-SG-new-dev",
            "name_prefix": "",
            "owner_id": "952346071341",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-new-SG"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-new-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-012fecb349666ed21"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "952346071341",
            "id": "sg-0ad6821cb00fa71a9",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.dev-infra.aws_default_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prd-infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "vpc",
      "provider": "module.prd-infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:952346071341:vpc/vpc-012fecb349666ed21",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-09e6157bcdc4a17cd",
            "default_route_table_id": "rtb-0a01b2b74dad735ce",
            "default_security_group_id": "sg-0820d08fcaa0de095",
            "dhcp_options_id": "dopt-06b39219a8e6a55e5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-012fecb349666ed21",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a01b2b74dad735ce",
            "owner_id": "952346071341",
            "region": "ap-south-1",
            "tags": {
              "Name": "Default VPC"
            },
            "tags_all": {
              "Name": "Default VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.prd-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "myinstance",
      "provider": "module.prd-infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f918f7e67a3323f0",
            "arn": "arn:aws:ec2:ap-south-1:952346071341:instance/i-0ae1386ee7a534539",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ae1386ee7a534539",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-new-prd",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00e47dffb5e0e3f78",
            "private_dns": "ip-172-31-37-61.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.37.61",
            "public_dns": "ec2-13-127-65-203.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.65.203",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05be9c8334f923f97",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "new-SG-new-prd"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e552a33ef5caae1e",
            "tags": {
              "Environment": "prd",
              "Name": "prd-terraform"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "prd-terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b780d83afbc9e707"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.prd-infra.aws_default_vpc.vpc",
            "module.prd-infra.aws_key_pair.keypairs",
            "module.prd-infra.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.prd-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "module.prd-infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:952346071341:security-group/sg-0b780d83afbc9e707",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All access open outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b780d83afbc9e707",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http open",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh open",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "new-SG-new-prd",
            "name_prefix": "",
            "owner_id": "952346071341",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prd",
              "Name": "prd-new-SG"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "prd-new-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-012fecb349666ed21"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "952346071341",
            "id": "sg-0b780d83afbc9e707",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.prd-infra.aws_default_vpc.vpc"
          ]
        }
      ]
    }
  ]
}